# slack-ai

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
slack_ai/: app.py
slack_ai/prompts/: __init__.py  base.py  emoji.py  jira_ticket.py  summary.py
slack_gpt/: app.py
slack_gpt/prompts/: __init__.py  jira_ticket.py  summary.py
