[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "slack_ai"
version = "0.1.0"
authors = [
    {name = "Yuho Jeong", email = "yuho8437@gmail.com"}
]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "3.21.3"
fastapi = "0.95.2"
openai = "0.27.2"
python-dotenv = "1.0.0"
requests = "2.26.0"
uvicorn = "0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
