[tool.poetry]
name = "slack_ai"
version = "0.1.0"
description = "Slack AI Bot"
authors = [
    "Yuho Jeong <yuho8437@gmail.com>"
]
packages = [
    { include = "slack_ai" },
]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "3.21.3"
fastapi = "0.95.2"
openai = "0.27.2"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core >= 1.5.1"]
build-backend = "poetry.core.masonry.api"
